--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 	"require": {
 		"slim/slim": "2.3.1",
 		"slim/views": "0.1.0",
-		"twig/twig": "1.13.1"
+		"twig/twig": "1.13.1",
+		"pimple/pimple": "1.0.2"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "3.7.x-dev"
