--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
 		}
 	},
 	"require": {
-		"slim/slim": "2.3.1",
+        "php": ">=5.3.0",
+        "ext-xhprof": "*",
+        "ext-mongo": "~1.3",
+        "slim/slim": "2.3.1",
 		"slim/views": "0.1.0",
 		"twig/twig": "1.13.1",
 		"pimple/pimple": "1.0.2"
