Install mongo extension on test runs.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ services:
 before_script:
   - composer install --prefer-dist --dev
   - chmod -R 0777 cache/
+  - pecl install mongo
   - echo "extension = mongo.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   - phpenv rehash
 
