--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,6 @@
     "require": {
         "php": ">=5.3.0",
         "ext-xhprof": "*",
-        "ext-mongo": "~1.3",
         "slim/slim": "2.3.1",
         "slim/views": "0.1.0",
         "twig/twig": "1.13.1",
@@ -19,5 +18,8 @@
     "require-dev": {
         "phpunit/phpunit": "3.7.x-dev",
         "ext-dom": "*"
-    }
+    }, 
+	"suggest": {
+        "ext-mongo": "~1.3",
+	}
 }
