--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
     "require-dev": {
         "phpunit/phpunit": "3.7.x-dev",
         "ext-dom": "*"
-    }, 
-	"suggest": {
-        "ext-mongo": "~1.3",
-	}
+    },
+    "suggest": {
+        "ext-mongo": "~1.3"
+    }
 }
