--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ php:
   - 5.5
   - 5.6
 
+matrix:
+  include:
+    - php: 5.5
+      env: COVERAGE=1
+
 services:
   - mongodb
 
@@ -17,4 +22,24 @@ before_script:
   - composer install --prefer-dist --dev
   - chmod -R 0777 cache/
 
-script: phpunit
+script:
+  - >
+    if [[ "$COVERAGE" == "0" ]]; then
+      echo;
+      echo "Running unit tests";
+      phpunit
+    fi
+  - >
+    if [[ "$COVERAGE" == "1" ]]; then
+      echo;
+      echo "Running unit tests with code-coverage";
+      phpunit --coverage-clover=unittest-coverage.clover
+    fi
+  - >
+    if [[ "$COVERAGE" == "1" ]]; then
+      echo;
+      echo "Uploading code coverage results";
+      wget https://scrutinizer-ci.com/ocular.phar
+      php ocular.phar code-coverage:upload --format=php-clover unittest-coverage.clover
+    fi
+
