--- a/webroot/web.config
+++ b/webroot/web.config
@@ -3,9 +3,10 @@
     <system.webServer>
         <rewrite>
             <rules>
+                <clear/>
                 <rule name="rule 1n" stopProcessing="true">
                     <match url="^" />
-                    <action type="Rewrite" url="/index.php" appendQueryString="true" />
+                    <action type="Rewrite" url="index.php" appendQueryString="true" />
                     <conditions>
                         <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
                     </conditions>
