--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "slim/slim": "2.3.1",
         "slim/views": "0.1.0",
         "twig/twig": "^1.13.1",
-        "pimple/pimple": "1.0.2"
+        "pimple/pimple": "1.0.2",
+        "alcaeus/mongo-php-adapter": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.x-dev",
