--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         "slim/slim": "2.3.1",
         "slim/views": "0.1.0",
         "twig/twig": "^1.13.1",
-        "pimple/pimple": "1.0.2",
-        "alcaeus/mongo-php-adapter": "^1.0"
+        "pimple/pimple": "1.0.2"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.x-dev",
@@ -24,6 +23,7 @@
         "ext-xhprof": "You need to install either xhprof or uprofiler to use XHGui.",
         "ext-uprofiler": "You need to install either xhprof or uprofiler to use XHGui.",
         "ext-mongo": "Mongo is needed to store profiler results for PHP < 7.",
-        "ext-mongodb": "Mongo is needed to store profiler results for PHP > 7."
+        "ext-mongodb": "Mongo is needed to store profiler results for PHP > 7.",
+        "alcaeus/mongo-php-adapter": "Mongo PHP Adapter is required for PHP >7 (when using ext-mongodb)"
     }
 }
