Install mongodb adaptor in install.php via require-dev

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "pimple/pimple": "1.0.2"
     },
     "require-dev": {
+        "alcaeus/mongo-php-adapter": "^1.0",
         "phpunit/phpunit": "3.7.x-dev",
         "ext-dom": "*"
     },
