--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
-    "name": "perftools/xhgui",
-    "description": "A web based interface for viewing profile data collected by XHProf.",
-    "version": "0.1",
+    "name": "lauripiisang/xhgui-data-collector",
+    "description": "Library for collecting and storing XHProf results for later use by XHGUI.",
     "license": "MIT",
     "autoload": {
         "psr-0": {
@@ -9,16 +8,7 @@
         }
     },
     "require": {
-        "php": ">=5.3.0",
-        "slim/slim": "2.6.3",
-        "slim/views": "0.1.0",
-        "twig/twig": "~1.17",
-        "pimple/pimple": "1.0.2"
-    },
-    "require-dev": {
-        "alcaeus/mongo-php-adapter": "^1.0",
-        "phpunit/phpunit": "3.7.x-dev",
-        "ext-dom": "*"
+        "php": ">=5.3.0"
     },
     "suggest": {
         "ext-xhprof": "You need to install either xhprof or uprofiler to use XHGui.",
