--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
     },
     "require": {
         "php": ">=5.3.0",
-        "slim/slim": "2.6.3",
-        "slim/views": "0.1.0",
+        "slim/slim": "^2.6.3",
+        "slim/views": "^0.1.0",
         "twig/twig": "~1.17",
-        "pimple/pimple": "1.0.2"
+        "pimple/pimple": "^1.0.2"
     },
     "require-dev": {
         "alcaeus/mongo-php-adapter": "^1.0",
