Move repo scope `lauripiisang` -> `perftools`
 - The project moved from `lauripiisang/xhgui-data-collector` to
    `perftools/xhgui-collector`. This commit adjusts README accordingly
 - Added Lauri Piisang as author
 - TODO: add original XHGUI maintainers into authors?

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,12 @@
 {
-    "name": "lauripiisang/xhgui-data-collector",
+    "name": "perftools/xhgui-collector",
     "description": "Library for collecting and storing XHProf results for later use by XHGUI.",
+    "authors": [
+        {
+            "name":  "Lauri Piisang",
+            "email": "lauri.piisang@eesti.ee"
+        }
+    ],
     "license": "MIT",
     "autoload": {
         "psr-0": {
