flamegraph: Clean up flameGraph.css patch (2)
Follows-up 0ff9af8543e2cd.

* Move the overrides to xhgui.css instead.
* Given the complexity of these overrides, don't try to undo
  each original style, but simply document that all
  d3-flame-graph-tip styles should be omitted when updating.
* Document the d3.flameGraph.js patch.

* Add ignore for pre-existing issues with csslint. Since
  sticker-ci was enabled without passing on current code first.
  Also, these issues are false negatives, and are bugs in csslint,
  not bugs in xhgui code.

Ref perftools/xhgui#211.

--- a/.stickler.yml
+++ b/.stickler.yml
@@ -1,7 +1,8 @@
 linters:
   phpcs:
     standard: PSR2
-  csslint: {  }
+  csslint:
+    ignore: 'ids,known-properties'
 files:
   ignore:
     - 'bower_components/*'
