--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,12 @@
         }
     },
     "require": {
-        "php": ">=5.3.0",
+        "php": ">=5.5.0",
         "slim/slim": "^2.6.3",
         "slim/views": "^0.1.0",
         "twig/twig": "~1.17",
-        "pimple/pimple": "^1.0.2"
+        "pimple/pimple": "^1.0.2",
+        "perftools/xhgui-collector": "^1.0.0"
     },
     "require-dev": {
         "alcaeus/mongo-php-adapter": "^1.0",
