Add Upload saver
This Saver allows one to upload a profile to a specified endpoint.

Signed-off-by: Jacob Kiers <kiers@comandi.nl>

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "ext-uprofiler": "You need to install either xhprof or uprofiler to use XHGui.",
         "ext-mongo": "Mongo is needed to store profiler results for PHP < 7.",
         "ext-mongodb": "Mongo is needed to store profiler results for PHP > 7.",
+        "ext-curl": "You need to install the curl extension to upload saved files",
         "alcaeus/mongo-php-adapter": "Mongo PHP Adapter is required for PHP >7 (when using ext-mongodb)"
     }
 }
