First version of backend decoupling with MongoDB and PDO.

--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,11 @@
         "slim/views": "^0.1.0",
         "twig/twig": "~1.17",
         "pimple/pimple": "^1.0.2",
-        "perftools/xhgui-collector": "^1.4.0"
+        "perftools/xhgui-collector": "^1.7.0"
     },
     "require-dev": {
         "alcaeus/mongo-php-adapter": "^1.1",
-        "phpunit/phpunit": "^5.7.27 | ^6.5.13",
-        "ext-dom": "*"
+        "phpunit/phpunit": "^5.7.27 | ^6.5.13"
     },
     "scripts": {
         "test": "phpunit",
