--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         }
     },
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "paragonie/random_compat": "^2.0"
     },
     "suggest": {
         "ext-xhprof": "You need to install either xhprof or uprofiler to use XHGui.",
