--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         }
     },
     "require": {
-        "php": ">=5.5.0",
+        "php": ">=5.6.0",
         "slim/slim": "^2.6.3",
         "slim/views": "^0.1.0",
         "twig/twig": "~1.17",
@@ -16,8 +16,8 @@
         "perftools/xhgui-collector": "^1.4.0"
     },
     "require-dev": {
-        "alcaeus/mongo-php-adapter": "^1.0",
-        "phpunit/phpunit": "4.*|5.*",
+        "alcaeus/mongo-php-adapter": "^1.1",
+        "phpunit/phpunit": "^5.7.27 | ^6.5.13",
         "ext-dom": "*"
     },
     "scripts": {
