--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   app:
     build: .
     volumes:
+      - webroot-share:/var/www/xhgui/webroot
       - ./config:/var/www/xhgui/config
     environment:
       - XHGUI_MONGO_HOST=mongodb://mongo:27017
@@ -12,6 +13,7 @@ services:
     image: nginx:1
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - webroot-share:/var/www/xhgui/webroot
     ports:
       - "8142:80"
 
@@ -19,5 +21,8 @@ services:
     image: percona/percona-server-mongodb:3.6
     # (case sensitive) engine: mmapv1, rocksdb, wiredTiger, inMemory
     command: --storageEngine=wiredTiger
+
+volumes:
+  webroot-share:
 
 # vim:ts=2:sw=2:et
