Introduce different storage models: file, pdo (tested on sqlite) and mongo.
New classes for storage
New class for filtering
New class for watched function storage
template updates
other changes.

Initial commit.
Known issues:
- unit tests are not working
- javascript date time picker does not work
- custom view does not work
- search filters should expose more fields

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "autoload": {
         "psr-0": {
             "Xhgui_": "src/"
-        }
+        },
+        "classmap": ["src/"]
     },
     "require": {
         "php": "^5.6 || ^7.0",
@@ -29,6 +30,7 @@
         "ext-uprofiler": "You need to install either xhprof or uprofiler to use XHGui.",
         "ext-mongo": "Mongo is needed to store profiler results for PHP < 7.",
         "ext-mongodb": "Mongo is needed to store profiler results for PHP > 7.",
+        "ext-igbinary": "Alternative serializer",
         "alcaeus/mongo-php-adapter": "Mongo PHP Adapter is required for PHP >7 (when using ext-mongodb)"
     }
 }
