--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "perftools/xhgui",
+    "name": "grzegorzdrozd/xhgui",
     "description": "A web based interface for viewing profile data collected by XHProf.",
     "license": "MIT",
     "autoload": {
