--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "slim/views": "^0.1.0",
         "twig/twig": "~1.17",
         "pimple/pimple": "^1.0.2",
-        "grzegorzdrozd/xhgui-collector": "dev-master",
+        "xhgui/xhgui-collector": "dev-master",
         "ext-json": "*"
     },
     "require-dev": {
@@ -35,12 +35,5 @@
         "ext-mongodb": "Mongo is needed to store profiler results for PHP > 7.",
         "ext-igbinary": "Alternative serializer",
         "alcaeus/mongo-php-adapter": "Mongo PHP Adapter is required for PHP >7 (when using ext-mongodb)"
-    },
-
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "git@github.com:GrzegorzDrozd/xhgui-collector.git"
-        }
-    ]
+    }
 }
