--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,9 @@
     "description": "A web based interface for viewing profile data collected by XHProf.",
     "license": "MIT",
     "autoload": {
+        "psr-4": {
+            "Tideways\\Xhprof\\": "src/"
+        },
         "psr-0": {
             "Xhgui_": "src/"
         }
