Update composer suggest descriptions

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "perftools/xhgui",
-    "description": "A web based interface for viewing profile data collected by XHProf.",
+    "description": "A web based interface for viewing profile data collected by XHProf",
     "license": "MIT",
     "autoload": {
         "psr-0": {
@@ -25,8 +25,7 @@
         "cover": "phpunit --coverage-clover=unittest-coverage.clover"
     },
     "suggest": {
-        "ext-mongo": "Mongo is needed to store profiler results for PHP < 7.",
-        "ext-mongodb": "Mongo is needed to store profiler results for PHP > 7.",
-        "alcaeus/mongo-php-adapter": "Mongo PHP Adapter is required for PHP >7 (when using ext-mongodb)"
+        "ext-mongodb": "Requried to store profiler results in MongoDB",
+        "alcaeus/mongo-php-adapter": "Required for storing profiler results in MongoDB"
     }
 }
