Test with sqlite saver

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ php:
 env:
   - XHGUI_SAVE_HANDLER=mongodb
   - XHGUI_SAVE_HANDLER=pdo XHGUI_PDO_DSN="mysql:host=localhost;dbname=xhgui" XHGUI_PDO_USER=root
+  - XHGUI_SAVE_HANDLER=pdo XHGUI_PDO_DSN="sqlite:/tmp/xhgui.sqlite3"
 
 jobs:
   allow_failures:
