--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   app:
-    build: .
+    image: xhgui/xhgui:0.14.0
     volumes:
       - webroot-share:/var/www/xhgui/webroot
       - ./config:/var/www/xhgui/config
