--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,7 @@ server {
     location ~ \.php$ {
         try_files $uri =404;
         include /etc/nginx/fastcgi_params;
-        fastcgi_pass    app:9000;
+        fastcgi_pass    xhgui:9000;
         fastcgi_index   index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 
