--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,8 @@ jobs:
     - name: "PHP CS Fixer"
       php: 7.0
       install:
-        - composer require --dev friendsofphp/php-cs-fixer:2.16
+        - composer global require friendsofphp/php-cs-fixer:2.16
       script:
-        - PATH=vendor/bin:$PATH
         - php-cs-fixer fix --verbose --diff --dry-run --ansi
 
 services:
