--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,13 +16,13 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: 7.2
-          tools: php-cs-fixer:2.16
+          tools: php-cs-fixer:2.16, cs2pr
           coverage: none
 
       - name: Install dependencies with composer
         run: composer install --no-interaction --no-progress --no-suggest
 
       - name: Run php-cs-fixer
-        run: php-cs-fixer fix -vvv
+        run: php-cs-fixer fix --verbose --diff --dry-run --format=checkstyle | cs2pr
 
 # vim:ft=yaml:et:ts=2:sw=2
