--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
             "php": "7.0.8",
             "ext-mongodb": "1.3.0"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "platform-check": "php-only"
     },
     "require": {
         "php": "^7.0",
