Move MongoDB config under "mongodb" subkey
Support for previous keys remains for undefined future

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - webroot-share:/var/www/xhgui/webroot
       - ./config:/var/www/xhgui/config
     environment:
-      - XHGUI_MONGO_HOST=mongodb://mongo:27017
+      - XHGUI_MONGO_HOSTNAME=mongo
       - XHGUI_MONGO_DATABASE=xhprof
 
   web:
