Use symfony/phpunit-bridge package
Remove phpunit direct dependency

--- a/composer.json
+++ b/composer.json
@@ -33,11 +33,11 @@
     "require-dev": {
         "glen/php-cs-fixer-config": "^0.3.0",
         "ocramius/lazy-property": "^1.0",
-        "phpunit/phpunit": "^5.7.27 | ^6.5.13"
+        "symfony/phpunit-bridge": "^5.2"
     },
     "scripts": {
         "openurl": "open http://xhgui.127.0.0.1.xip.io:8142",
-        "test": "phpunit",
-        "cover": "phpunit --coverage-clover=unittest-coverage.clover"
+        "test": "simple-phpunit",
+        "cover": "simple-phpunit --coverage-clover=unittest-coverage.clover"
     }
 }
