Disable fail-fast for mongodb tests
Always run mongodb tess for all versions.
This ensures we can see the version differences even if they fail.

--- a/.github/workflows/tests-mongodb.yml
+++ b/.github/workflows/tests-mongodb.yml
@@ -8,6 +8,7 @@ jobs:
     name: PHP ${{ matrix.php }}
     runs-on: ubuntu-20.04
     strategy:
+      fail-fast: false
       matrix:
         php:
           - "7.0"
