Downgrade xdebug to 2.9.8, to prevent possible segfault

--- a/.github/workflows/tests-mongodb.yml
+++ b/.github/workflows/tests-mongodb.yml
@@ -30,7 +30,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
-          extensions: mongodb
+          extensions: xdebug-2.9.8, mongodb
 
       - name: Validate composer.json and composer.lock
         run: composer validate
