--- a/.github/workflows/tests-mysql.yml
+++ b/.github/workflows/tests-mysql.yml
@@ -36,7 +36,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
-          extensions: pdo, pdo_mysql
+          extensions: xdebug-2.9.8, pdo, pdo_mysql
 
       - name: Validate composer.json and composer.lock
         run: composer validate
