--- a/.github/workflows/tests-pgsql.yml
+++ b/.github/workflows/tests-pgsql.yml
@@ -35,7 +35,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
-          extensions: pdo, pdo_pgsql
+          extensions: xdebug-2.9.8, pdo, pdo_pgsql
 
       - name: Validate composer.json and composer.lock
         run: composer validate
