--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "XHGui\\": "src/Xhgui/"
+            "XHGui\\": "src/"
         }
     },
     "autoload-dev": {
