Update TwigExtension not to use deprecated interfaces

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "slim/slim": "^2.6.3",
         "slim/views": "^0.1.0",
         "symfony/options-resolver": "^3.3",
-        "twig/twig": "~1.17"
+        "twig/twig": "^1.26"
     },
     "require-dev": {
         "glen/php-cs-fixer-config": "^0.3.0",
