Use BUILD_SOURCE=prebuilt to use layers from previous release
The --cache-from seems to have no effect in GitHub actions,
so switch to manual layers specification.

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,7 +17,6 @@ jobs:
 
       - name: Docker build
         run: |
-          docker pull xhgui/xhgui:latest
-          docker build --cache-from=xhgui/xhgui:latest .
+          docker build --build-arg=BUILD_SOURCE=prebuilt .
 
 # vim:ft=yaml:et:ts=2:sw=2
