--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "php": "^7.2 || ^8.0",
         "ext-json": "*",
         "alcaeus/mongo-php-adapter": "^1.1",
+        "perftools/xhgui-collector": "^1.8",
         "pimple/pimple": "^3.0",
         "slim/flash": "^0.4.0",
         "slim/slim": "^3.12",
