--- a/.github/workflows/release-on-milestone-closed.yml
+++ b/.github/workflows/release-on-milestone-closed.yml
@@ -8,6 +8,11 @@ on:
     types:
       - "closed"
 
+env:
+  GIT_AUTHOR_NAME: "XHGui Release Bot"
+  # NOTE: The e-mail does not exist
+  GIT_AUTHOR_EMAIL: "xhgui-release-bot@github.com"
+
 jobs:
   release:
     name: "GIT tag, release & create merge-up PR"
@@ -27,8 +32,8 @@ jobs:
         env:
           "GITHUB_TOKEN": ${{ secrets.ORGANIZATION_ADMIN_TOKEN }}
           "SIGNING_SECRET_KEY": ${{ secrets.SIGNING_SECRET_KEY }}
-          "GIT_AUTHOR_NAME": ${{ secrets.GIT_AUTHOR_NAME }}
-          "GIT_AUTHOR_EMAIL": ${{ secrets.GIT_AUTHOR_EMAIL }}
+          "GIT_AUTHOR_NAME": ${{ env.GIT_AUTHOR_NAME }}
+          "GIT_AUTHOR_EMAIL": ${{ env.GIT_AUTHOR_EMAIL }}
 
       - name: "Create Merge-Up Pull Request"
         uses: "laminas/automatic-releases@v1"
@@ -37,8 +42,8 @@ jobs:
         env:
           "GITHUB_TOKEN": ${{ secrets.GITHUB_TOKEN }}
           "SIGNING_SECRET_KEY": ${{ secrets.SIGNING_SECRET_KEY }}
-          "GIT_AUTHOR_NAME": ${{ secrets.GIT_AUTHOR_NAME }}
-          "GIT_AUTHOR_EMAIL": ${{ secrets.GIT_AUTHOR_EMAIL }}
+          "GIT_AUTHOR_NAME": ${{ env.GIT_AUTHOR_NAME }}
+          "GIT_AUTHOR_EMAIL": ${{ env.GIT_AUTHOR_EMAIL }}
 
       - name: "Create and/or Switch to new Release Branch"
         uses: "laminas/automatic-releases@v1"
@@ -47,8 +52,8 @@ jobs:
         env:
           "GITHUB_TOKEN": ${{ secrets.ORGANIZATION_ADMIN_TOKEN }}
           "SIGNING_SECRET_KEY": ${{ secrets.SIGNING_SECRET_KEY }}
-          "GIT_AUTHOR_NAME": ${{ secrets.GIT_AUTHOR_NAME }}
-          "GIT_AUTHOR_EMAIL": ${{ secrets.GIT_AUTHOR_EMAIL }}
+          "GIT_AUTHOR_NAME": ${{ env.GIT_AUTHOR_NAME }}
+          "GIT_AUTHOR_EMAIL": ${{ env.GIT_AUTHOR_EMAIL }}
 
       - name: "Bump Changelog Version On Originating Release Branch"
         uses: "laminas/automatic-releases@v1"
@@ -57,8 +62,8 @@ jobs:
         env:
           "GITHUB_TOKEN": ${{ secrets.GITHUB_TOKEN }}
           "SIGNING_SECRET_KEY": ${{ secrets.SIGNING_SECRET_KEY }}
-          "GIT_AUTHOR_NAME": ${{ secrets.GIT_AUTHOR_NAME }}
-          "GIT_AUTHOR_EMAIL": ${{ secrets.GIT_AUTHOR_EMAIL }}
+          "GIT_AUTHOR_NAME": ${{ env.GIT_AUTHOR_NAME }}
+          "GIT_AUTHOR_EMAIL": ${{ env.GIT_AUTHOR_EMAIL }}
 
       - name: "Create new milestones"
         uses: "laminas/automatic-releases@v1"
@@ -67,5 +72,7 @@ jobs:
         env:
           "GITHUB_TOKEN": ${{ secrets.GITHUB_TOKEN }}
           "SIGNING_SECRET_KEY": ${{ secrets.SIGNING_SECRET_KEY }}
-          "GIT_AUTHOR_NAME": ${{ secrets.GIT_AUTHOR_NAME }}
-          "GIT_AUTHOR_EMAIL": ${{ secrets.GIT_AUTHOR_EMAIL }}
+          "GIT_AUTHOR_NAME": ${{ env.GIT_AUTHOR_NAME }}
+          "GIT_AUTHOR_EMAIL": ${{ env.GIT_AUTHOR_EMAIL }}
+
+# vim:ft=yaml:et:ts=2:sw=2
