--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "ext-json": "*",
         "alcaeus/mongo-php-adapter": "^1.1",
         "pimple/pimple": "^3.0",
+        "slim/flash": "^0.4.0",
         "slim/slim": "^3.12",
         "slim/twig-view": "^2.5",
         "slim/views": "^0.1.0",
