--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "platform-check": "php-only"
     },
     "require": {
-        "php": "^7.2 || ^8.0",
+        "php": "^7.2 || ~8.0 || ~8.1",
         "ext-json": "*",
         "alcaeus/mongo-php-adapter": "^1.1",
         "pimple/pimple": "^3.0",
