--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,6 +6,12 @@
 name: Publish Docker image
 
 on:
+  # Runs your workflow when you push a commit or tag.
+  # https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows#push
+  # Note: An event will not be created when you push more than three tags at once.
+  push:
+    branches:
+      - "*.*.x"
   # Runs your workflow when a release or draft of a release is published on GitHub.
   # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#release
   release:
