--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   xhgui:
     # https://hub.docker.com/r/xhgui/xhgui/tags
     image: xhgui/xhgui:latest
+    restart: always
     volumes:
       - ./config:/var/www/xhgui/config
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
@@ -17,6 +18,7 @@ services:
     image: percona/percona-server-mongodb:3.6
     # (case sensitive) engine: mmapv1, rocksdb, wiredTiger, inMemory
     command: --storageEngine=wiredTiger
+    restart: always
     environment:
       - MONGO_INITDB_DATABASE=xhprof
     volumes:
