Increase max body size

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,8 @@ server {
     root   /var/www/xhgui/webroot;
     index  index.php;
 
+    client_max_body_size 5M;
+
     location / {
         try_files $uri $uri/ /index.php$is_args$args;
     }
